2008-10-03  Vadim Kurland  <vadim@vk.crocodile.org>

	* GroupObjectDialog.cpp (GroupObjectDialog::iconContextMenu):
	fixed bug #2144122 "Segfault when trying to add an address to a
	group"

	* ProjectPanel_file_ops.cpp (ProjectPanel::chooseNewFileName):
	fixed bug #2144358 "Double check with 'save as'". The GUI used to
	ask twice if user wants to overwrite the file in Save As operation
	if file with given name already existed.

	* FWWindow.cpp (FWWindow::projectWindowClosed): fixed bug #2144114
	"fwbuilder * exits if the last object file is closed". The GUI
	will not terminate after the last window is closed but instead
	will just show empty main window.

	* fwbedit.cpp (main): fixed bug #2143894: "fwbedit list does not
	show objects". Command "fwbedit list -f file" did not print
	anything unless option "-F" was supplied. This change adds default
	value for this option so that when it is missing, the command
	prints object path.

	* fwbedit.1: fixed bug #2143961: a typo in the man page fwbedit.1

2008-10-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* instDialog.cpp (instDialog::finishInstall): fixed bug #2125604:
	"Cancel button does not kill the installer". Cancel button of the
	installer wizard in fact kills background process. Second issue
	raised in this bug report is that "Finish" button was always
	enabled. This is now fixed.

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printTarget): fixed
	bug #2141911: "no ULOG for ip6tables". ULOG target has not been
	implemented for ip6tables yet, so the compiler should fall back to
	LOG target while compiling ipv6 policy.

	* RuleSetView.cpp (RuleSetView::updateGeometries): fixed crash
	that happened on Ubuntu with QT 4.3.x because of recursive call to
	updateGeometries()

	* fixed icon for rule action "Mark"

2008-09-30  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (PolicyView::PolicyView): constructors of rule
	set view classes (PolicyView, NATView, RoutingView) used to set