@@ -43,8 +43,6 @@ class QWidget;
 #define LoadStandardObjects 0
 #define LoadLastEditedFile  1
     
-#define SETTINGS_PATH_PREFIX  "/3.0"
-
 class FWBSettings : public QSettings {
 
  public:
