@@ -22,10 +22,22 @@
    <string>Network</string>
   </property>
   <layout class="QGridLayout" >
-   <property name="margin" >
+   <property name="leftMargin" >
     <number>2</number>
    </property>
-   <property name="spacing" >
+   <property name="topMargin" >
+    <number>2</number>
+   </property>
+   <property name="rightMargin" >
+    <number>2</number>
+   </property>
+   <property name="bottomMargin" >
+    <number>2</number>
+   </property>
+   <property name="horizontalSpacing" >
+    <number>2</number>
+   </property>
+   <property name="verticalSpacing" >
     <number>2</number>
    </property>
    <item row="0" column="0" >
@@ -121,10 +133,22 @@
         <enum>QFrame::Sunken</enum>
        </property>
        <layout class="QGridLayout" >
-        <property name="margin" >
+        <property name="leftMargin" >
          <number>2</number>
         </property>
-        <property name="spacing" >
+        <property name="topMargin" >
+         <number>2</number>
+        </property>
+        <property name="rightMargin" >
+         <number>2</number>
+        </property>
+        <property name="bottomMargin" >
+         <number>2</number>
+        </property>
+        <property name="horizontalSpacing" >
+         <number>2</number>
+        </property>
+        <property name="verticalSpacing" >
          <number>2</number>
         </property>
         <item row="0" column="2" >
@@ -189,13 +213,22 @@
         <enum>QFrame::Sunken</enum>
        </property>
        <layout class="QGridLayout" >
+        <property name="leftMargin" >
+         <number>2</number>
+        </property>
+        <property name="topMargin" >
+         <number>2</number>
+        </property>
+        <property name="rightMargin" >
+         <number>2</number>
+        </property>
+        <property name="bottomMargin" >
+         <number>2</number>
+        </property>
         <property name="horizontalSpacing" >
          <number>8</number>
         </property>
         <property name="verticalSpacing" >
-         <number>2</number>
-        </property>
-        <property name="margin" >
          <number>2</number>
         </property>
         <item row="1" column="1" >
@@ -346,7 +379,7 @@
                 <property name="orientation" >
                  <enum>Qt::Vertical</enum>
                 </property>
-                <property name="sizeHint" stdset="0" >
+                <property name="sizeHint" >
                  <size>
                   <width>20</width>
                   <height>21</height>
@@ -443,7 +476,7 @@
   </connection>
   <connection>
    <sender>address</sender>
-   <signal>lostFocus()</signal>
+   <signal>editingFinished()</signal>
    <receiver>NetworkDialogIPv6_q</receiver>
    <slot>addressEntered()</slot>
    <hints>
@@ -474,8 +507,4 @@
    </hints>
   </connection>
  </connections>
- <slots>
-  <slot>changed()</slot>
-  <slot>addressEntered()</slot>
- </slots>
 </ui>
